# travel

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  stream.py
backend/app/api/: chat.py  documents.py  upload.py
backend/app/rag/: loader.py  retriever.py  vector_store.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/agent/: graph.py  stream.py
backend/src/backend/api/: chat.py  documents.py  upload.py
backend/src/backend/models/: schemas.py
backend/src/backend/rag/: retriever.py  vector_store.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: ChatInterface.tsx  FileUploader.tsx
