[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "STAR", email = "HIJKLMOON@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "jieba>=0.42.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
